--- a/syllabus/texts.Rmd
+++ b/syllabus/texts.Rmd
@@ -24,7 +24,8 @@
 [[buy on amazon](https://www.amazon.com/Fundamentals-Data-Visualization-Informative-Compelling/dp/1492031089)]
 - Check out this awesome collection of [past "Tidy Tuesday" challenges](https://nsgrantham.shinyapps.io/tidytuesdayrocks/)
 
-**Customizing `ggplot2`**:
+**Plotting guides with `ggplot2`**:
+
 - [RStudio `ggplot2` Cheatsheet](https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf)
 - [Tidyverse `ggplot2` reference guide](https://ggplot2.tidyverse.org/reference/)
 - [R Cookbook for `ggplot2`](http://www.cookbook-r.com/Graphs/)
